submission/feedback-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-api
  labels:
    app: feedback-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: feedback-api
  template:
    metadata:
      labels:
        app: feedback-api
    spec:
      containers:
        - name: feedback-api
          image: khalil123456/feedback-api:submission
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 3
          volumeMounts:
            - name: sqlite-volume
              mountPath: /usr/db
      volumes:
        - name: sqlite-volume
          persistentVolumeClaim:
            claimName: sqlite-pvc
