submission/logic-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logic-api
  labels:
    app: logic-api
  annotations:
    consul.hashicorp.com/connect-inject: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: logic-api
  template:
    metadata:
      labels:
        app: logic-api
    spec:
      containers:
      - image: khalil123456/logic-api:submission
        imagePullPolicy: Always
        name: logic-api
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 3
