submission/feedback-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedback-api-service
spec:
  selector:
    app: feedback-api
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 80
