submission/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /admin/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: feedback-api-service
                port:
                  number: 9000
